[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "asyncapi-python"
description = "Library for generating AsyncAPI spec from python definitions, converting to YAML, JSON, HTML and spinning up consumers/producers etc"
authors = [
    {name = "Ed Herbert", email = "edherbs147@gmail.com"}
]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]
requires-python = ">=3.8"
dependencies = [
    "aiofiles",
    "fastapi",
    "Jinja2",
    "pydantic",
    "uvicorn"
]

[project.optional-dependencies]
test = [
    "black==22.1",
    "flake8==4.0.1",
    "isort==5.10",
    "mypy==0.931",
    "pyproject-flake8==0.0.1a2",
    "pytest==7.0"
]

[tool.flit.sdist]
exclude = [
    "Makefile"
]

[tool.flit.module]
name = "asyncapi"

[tool.flake8]
max-line-length = 79
max-complexity = 8
builtins = "unicode"
tee = "true"
exclude = "./env,./.env,./venv,./.venv,./scratch"

[tool.black]
line-length = 79

[tool.mypy]
files = "asyncapi,tests"

[tool.isort]
profile = "black"
